// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Nested encoding Message can marshal a message with a request set 1`] = `"{"request":"eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0=","response":""}"`;

exports[`Nested encoding Message can unmarshal a message with a request set 1`] = `
{
  "request": "eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0=",
  "response": "",
}
`;

exports[`Nested encoding Message can marshal a message with a response set 1`] = `"{"request":"","response":"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ=="}"`;

exports[`Nested encoding Message can unmarshal a message with a response set 1`] = `
{
  "request": "",
  "response": "eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ==",
}
`;

exports[`Nested encoding Request can marshal a simple request 1`] = `"eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0="`;

exports[`Nested encoding Request can unmarshal a simple request 1`] = `
{
  "args": [
    "Hello, world!",
  ],
  "call": "1",
  "functionName": "Println",
}
`;

exports[`Nested encoding Request can marshal a complex request 1`] = `"eyJjYWxsIjoiMS0yLTMiLCJmdW5jdGlvbiI6IkFkZCIsImFyZ3MiOlsiTVE9PSIsIk1nPT0iLCJleUpoYzJSbUlqb3hmUT09Il19"`;

exports[`Nested encoding Request can unmarshal a complex request 1`] = `
{
  "args": [
    1,
    2,
    {
      "asdf": 1,
    },
  ],
  "call": "1-2-3",
  "functionName": "Add",
}
`;

exports[`Nested encoding Response can marshal a simple response with no error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ=="`;

exports[`Nested encoding Response can unmarshal a simple response with no error 1`] = `
{
  "call": "1",
  "err": "",
  "value": true,
}
`;

exports[`Nested encoding Response can marshal a simple response with error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiJ0ZXN0IGVycm9yIn0="`;

exports[`Nested encoding Response can unmarshal a simple response with error 1`] = `
{
  "call": "1",
  "err": "test error",
  "value": true,
}
`;

exports[`Nested encoding Response can marshal a complex response with no error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZXlKaElqb3hMQ0ppSWpwN0ltTWlPaUowWlhOMEluMTkiLCJlcnIiOiIifQ=="`;

exports[`Nested encoding Response can unmarshal a complex response with no error 1`] = `
{
  "call": "1",
  "err": "",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Nested encoding Response can marshal a complex response with error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZXlKaElqb3hMQ0ppSWpwN0ltTWlPaUowWlhOMEluMTkiLCJlcnIiOiJ0ZXN0IGVycm9yIn0="`;

exports[`Nested encoding Response can unmarshal a complex response with error 1`] = `
{
  "call": "1",
  "err": "test error",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Flat encoding Message can marshal a message with a request set 1`] = `"{"request":{"call":"1","function":"Println","args":["Hello, world!"]},"response":""}"`;

exports[`Flat encoding Message can unmarshal a message with a request set 1`] = `
{
  "request": {
    "args": [
      "Hello, world!",
    ],
    "call": "1",
    "function": "Println",
  },
  "response": "",
}
`;

exports[`Flat encoding Message can marshal a message with a response set 1`] = `"{"request":"","response":{"call":"1","value":true,"err":""}}"`;

exports[`Flat encoding Message can unmarshal a message with a response set 1`] = `
{
  "request": "",
  "response": {
    "call": "1",
    "err": "",
    "value": true,
  },
}
`;

exports[`Flat encoding Request can marshal a simple request 1`] = `
{
  "args": [
    "Hello, world!",
  ],
  "call": "1",
  "function": "Println",
}
`;

exports[`Flat encoding Request can unmarshal a simple request 1`] = `
{
  "args": [
    "Hello, world!",
  ],
  "call": undefined,
  "functionName": "Println",
}
`;

exports[`Flat encoding Request can marshal a complex request 1`] = `
{
  "args": [
    1,
    2,
    {
      "asdf": 1,
    },
  ],
  "call": "1-2-3",
  "function": "Add",
}
`;

exports[`Flat encoding Request can unmarshal a complex request 1`] = `
{
  "args": [
    1,
    2,
    {
      "asdf": 1,
    },
  ],
  "call": undefined,
  "functionName": "Add",
}
`;

exports[`Flat encoding Response can marshal a simple response with no error 1`] = `
{
  "call": "1",
  "err": "",
  "value": true,
}
`;

exports[`Flat encoding Response can unmarshal a simple response with no error 1`] = `
{
  "call": undefined,
  "err": "",
  "value": true,
}
`;

exports[`Flat encoding Response can marshal a simple response with error 1`] = `
{
  "call": "1",
  "err": "test error",
  "value": true,
}
`;

exports[`Flat encoding Response can unmarshal a simple response with error 1`] = `
{
  "call": undefined,
  "err": "test error",
  "value": true,
}
`;

exports[`Flat encoding Response can marshal a complex response with no error 1`] = `
{
  "call": "1",
  "err": "",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Flat encoding Response can unmarshal a complex response with no error 1`] = `
{
  "call": undefined,
  "err": "",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Flat encoding Response can marshal a complex response with error 1`] = `
{
  "call": "1",
  "err": "test error",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Flat encoding Response can unmarshal a complex response with error 1`] = `
{
  "call": undefined,
  "err": "test error",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;
